--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "mithril": "^2.0.4"
+    "mithril": "^2.0.4",
+    "webm-muxer": "^3.1.0"
   },
   "prettier": {
     "printWidth": 120
